ADD: Weather client
